# hpspde

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
.github/workflows/: gtest.yaml
apps/: interpolator.cc  poisson.cc
gtests/: domain_decomposition_01.cc  interpolation.cc  poisson_test.cc  two_level.cc  two_level_01.cc
include/: interpolator.h  poisson.h  test_bench.h  two_level_multigrid.h
prms/: 01_domain_decomposition.prm  01_eigenvalues.prm  01_smooth_interpolation.prm  01_smooth_poisson.prm  03_eigenvalues.prm  smoother.prm  two_level_coarse.prm  two_level_fine.prm
source/: interpolator.cc  poisson.cc  test_bench.cc
